logs/mozaik.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mozaik'...
Listing './lib/python3.5/site-packages/mozaik/analysis'...
Compiling './lib/python3.5/site-packages/mozaik/analysis/vision.py'...
***   File "./lib/python3.5/site-packages/mozaik/analysis/vision.py", line 49
    print sheet
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mozaik/connectors'...
Compiling './lib/python3.5/site-packages/mozaik/controller.py'...
***   File "./lib/python3.5/site-packages/mozaik/controller.py", line 70
    exec "import pyNN.nest as sim" in  globals(), locals()
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mozaik/experiments'...
Listing './lib/python3.5/site-packages/mozaik/meta_workflow'...
Compiling './lib/python3.5/site-packages/mozaik/meta_workflow/parameter_search.py'...
***   File "./lib/python3.5/site-packages/mozaik/meta_workflow/parameter_search.py", line 113
    print p.communicate(input=data)[0]
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mozaik/meta_workflow/visualization.py'...
***   File "./lib/python3.5/site-packages/mozaik/meta_workflow/visualization.py", line 64
    print "ZZZ"
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mozaik/models'...
Listing './lib/python3.5/site-packages/mozaik/models/vision'...
Compiling './lib/python3.5/site-packages/mozaik/models/vision/spatiotemporalfilter.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (spatiotemporalfilter.py, line 370)
Listing './lib/python3.5/site-packages/mozaik/sheets'...
Compiling './lib/python3.5/site-packages/mozaik/sheets/__init__.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (__init__.py, line 153)
Listing './lib/python3.5/site-packages/mozaik/stimuli'...
Listing './lib/python3.5/site-packages/mozaik/stimuli/vision'...
Listing './lib/python3.5/site-packages/mozaik/storage'...
Listing './lib/python3.5/site-packages/mozaik/tools'...
Listing './lib/python3.5/site-packages/mozaik/visualization'...
Compiling './lib/python3.5/site-packages/mozaik/visualization/helper_functions.py'...
***   File "./lib/python3.5/site-packages/mozaik/visualization/helper_functions.py", line 62
    print 'YO'
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mozaik/visualization/plotting.py'...
***   File "./lib/python3.5/site-packages/mozaik/visualization/plotting.py", line 581
    print len(self.retinal_input)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mozaik-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
